--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-  About | Karunya Eye care
+  About | Karunya Eye Hospital
 {% endblock %}
 
 {% block content %}
@@ -27,19 +27,15 @@
           <div class="about-img d-flex flex-column align-items-center">
             <img src="static/images/gallery/17.jpg" alt="" class="img-fluid mb-4" />
             <img src="static/images/gallery/15.jpg" alt="" class="img-fluid mb-4" />
-            <img src="static/images/gallery/17.jpg" alt="" class="img-fluid mb-4" />
-            <img src="static/images/gallery/15.jpg" alt="" class="img-fluid" />
+            <img src="static/images/shop.jpeg" alt="" class="img-fluid mb-4" />
+            <img src="static/images/gallery/33 Q.jpg" alt="" class="img-fluid" />
           </div>
         </div>
         <!-- Content Section: 50% Width -->
         <div class="col-lg-6 col-sm-12">
           <div class="about-content pl-4 mt-4 mt-lg-0">
             <h2 class="title-color">About Karunya Eye care</h2>
-            <p class="mt-4 mb-5">About Karunya Eye Hospital
-Established in the year 1985 in the name and style as K.K.Opticals & Eye Clinic at Adoor, Pathanamthitta District, Kerala by Mr. Tilly B George, a pioneer in the field of Optical Lens, Frames and its accessories, has achieved remarkable growth for the past 40 years. His commitment, determination, hard work and vision of establishing a “Dream Center” of eye care is now a reality. 
-Karunya Eye Hospital (KEH), the present-day Specialty Eye Care Hospital at Adoor was established in the year 2008. KEH is one of most trusted eye care hospitals in Adoor, Pathanamthitta District, Kerala State (India), committed to providing quality eye care and treatment of eye disorders to all sections of society. Now we have Three most modern Centres at Adoor, Pandalam and Kottarakkara, offers all ophthalmic specialities, serving hundreds of patients every day. We have Eight highly qualified and dedicated Eye Specialists & surgeons, who provide a wide range of speciality ophthalmic care. Our team of doctors provide Compassionate and comprehensive treatments to all patients visiting our Centres.  KEH’s state-of-the art facilities, latest treatment techniques, highly experienced eye specialists, competent staff, and certified technicians allow us to provide superior eye care for patients and attain the best possible results. 
-A NABH Certified Eye Hospital, we are committed to providing the best services in eye care through continual improvements of our systems, process, technology, and through the employment of dedicated and competent professionals of a progressive mindset.  We offer the most advanced Eye Care Treatment. We combine the expertise of our team of Eye Surgeons, highly experienced in their specialties of Cataract, Retina, Glaucoma, Laser Eye Surgeries etc. Thousands of most advanced Painless MICS Cataract Surgeries (Phaco) have been performed in our Centres.  
-KEH is conveniently located with easy access by road, rail and air. Thiruvananthapuram International Airport is only 95 km away and the nearest railway station is only 26 km away from the hospital. The district headquarters, Pathanamthitta is also only 18 Kms away from the hospital. Main Central (MC) Road is passing through Adoor.</p>
+            <p class="mt-4 mb-5">About Karunya Eye Hospital Established in the year 1985 in the name and style as K.K.Opticals & Eye Clinic at Adoor, Pathanamthitta District, Kerala by Mr. Tilly B George, a pioneer in the field of Optical Lens, Frames and its accessories, has achieved remarkable growth for the past 40 years. His commitment, determination, hard work and vision of establishing a “Dream Center” of eye care is now a reality. Karunya Eye Hospital (KEH), the present-day Specialty Eye Care Hospital at Adoor was established in the year 2008. KEH is one of most trusted eye care hospitals in Adoor, Pathanamthitta District, Kerala State (India), committed to providing quality eye care and treatment of eye disorders to all sections of society. Now we have Three most modern Centres at Adoor, Pandalam and Kottarakkara, offers all ophthalmic specialities, serving hundreds of patients every day. We have Eight highly qualified and dedicated Eye Specialists & surgeons, who provide a wide range of speciality ophthalmic care. Our team of doctors provide Compassionate and comprehensive treatments to all patients visiting our Centres. KEH’s state-of-the art facilities, latest treatment techniques, highly experienced eye specialists, competent staff, and certified technicians allow us to provide superior eye care for patients and attain the best possible results. A NABH Certified Eye Hospital, we are committed to providing the best services in eye care through continual improvements of our systems, process, technology, and through the employment of dedicated and competent professionals of a progressive mindset. We offer the most advanced Eye Care Treatment. We combine the expertise of our team of Eye Surgeons, highly experienced in their specialties of Cataract, Retina, Glaucoma, Laser Eye Surgeries etc. Thousands of most advanced Painless MICS Cataract Surgeries (Phaco) have been performed in our Centres. KEH is conveniently located with easy access by road, rail and air. Thiruvananthapuram International Airport is only 95 km away and the nearest railway station is only 26 km away from the hospital. The district headquarters, Pathanamthitta is also only 18 Kms away from the hospital. Main Central (MC) Road is passing through Adoor.</p>
 
             <a href="about" class="btn btn-main-2 btn-round-full btn-icon">Know more<i class="icofont-simple-right ml-3"></i></a>
           </div>
