--- a/templates/contactform.html
+++ b/templates/contactform.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} Contact | Karunya Eyecare{% endblock %}
+{% block title %} Contact | Karunya Eye Hospital{% endblock %}
 
 {% block content %}
 <section class="page-title bg-1">
