--- a/templates/lens.html
+++ b/templates/lens.html
@@ -29,7 +29,7 @@
 
         <!-- Content Column -->
         <div class="col-lg-7 col-md-12">
-          <h3 class="mb-3 title-color">Contact Lens Clinic at Karunya Eye Hospital</h3>
+          <h3 class="mb-3 title-color">Contact Lens Clinic at Karunya Eye Care</h3>
           <p class="mb-4">At KEH, our Contact Lens Clinic is equipped with state-of-the-art technology to meet the diverse needs of all patients. We offer a comprehensive range of contact lenses designed for clarity, comfort, and convenience.</p>
           <ul class="list-unstyled">
             <li class="mb-3">
