--- a/templates/managements.html
+++ b/templates/managements.html
@@ -15,7 +15,7 @@
         <div class="col-md-12">
           <div class="block text-left">
             <span class="text-white">Management</span>
-            <h1 class="text-capitalize mb-5 text-lg">Management at Karunya Eye Hospital</h1>
+            <h1 class="text-capitalize mb-5 text-lg">Management at Karunya Eye Care</h1>
           </div>
         </div>
       </div>
