--- a/templates/store.html
+++ b/templates/store.html
@@ -24,7 +24,7 @@
       <div class="row shadow rounded bg-light overflow-hidden">
         <!-- Text Content Left -->
         <div class="col-lg-6 p-5 d-flex flex-column justify-content-center">
-          <h2 class="mb-4 text-primary fw-bold">Karunya Eye Hospital (Optical Store – Insight Galleria)</h2>
+          <h2 class="mb-4 text-primary fw-bold">Karunya Eye Care (Optical Store – Insight Galleria)</h2>
           <p class="text-muted">At KEH’s Optical Store (Insight Galleria), find your perfect eyewear with our stylish frames, sunglasses, and tailored contact lens options.</p>
           <h4 class="text-dark mt-4">Discover Your Perfect Vision Solution</h4>
           <p class="text-muted">At KEH’s Optical Store, we believe that clear vision enhances your quality of life. Our extensive range of high-quality eyewear and personalized services ensures that you find the perfect solution for your vision needs.</p>
