--- a/templates/doctor.html
+++ b/templates/doctor.html
@@ -12,7 +12,7 @@
         <div class="col-md-12">
           <div class="block text-left">
             <span class="text-white">Our Specialists</span>
-            <h1 class="text-capitalize mb-5 text-lg">Expert Eye Hospital Doctors</h1>
+            <h1 class="text-capitalize mb-5 text-lg">Expert Eye Care Doctors</h1>
           </div>
         </div>
       </div>
@@ -164,20 +164,6 @@
             <div class="content mt-3">
               <h4 class="mb-0"><a href="doctor-single.html">DR. ATHULYA.S</a></h4>
               <p>MBBS, DNB (PHACO SURGEON)</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat2"]'>
-          <div class="position-relative doctor-inner-box">
-            <div class="doctor-profile">
-              <div class="doctor-img">
-                <img src="static/images/team/doctor10.png" alt="doctor-image" class="img-fluid w-100" style="height: 250px;"/>
-              </div>
-            </div>
-            <div class="content mt-3">
-              <h4 class="mb-0"><a href="doctor-single.html">DR. SREELEKSHMI S.R</a></h4>
-              <p>MBBS, M.S (CONSULTANT OPHTHALMOLOGIST)</p>
             </div>
           </div>
         </div>
