--- a/templates/services.html
+++ b/templates/services.html
@@ -22,6 +22,9 @@
   <!-- Services Section -->
   <section class="services-section py-5">
     <div class="container">
+      <div class="text-center mb-5">
+        <h2 class="title-color">Services</h2>
+      </div>
       <div class="row">
         <!-- Service Card 1 -->
         <div class="col-lg-3 col-md-6 mb-4">
@@ -86,7 +89,7 @@
         <!-- Service Card 7 -->
         <div class="col-lg-3 col-md-6 mb-4">
           <a href="store" class="service-card">
-            <img src="https://t4.ftcdn.net/jpg/02/44/14/05/360_F_244140583_MQ27ktdnXHxoWcDCRyX7YjZF49NsuJ86.jpg" alt="Optical Store" class="img-fluid rounded-top" />
+            <img src="static/images/shop.jpeg" alt="Optical Store" class="img-fluid rounded-top" />
             <div class="card-body">
               <h5 class="card-title">Optical Store</h5>
             </div>
@@ -96,7 +99,7 @@
         <!-- Service Card 8 -->
         <div class="col-lg-3 col-md-6 mb-4">
           <a href="customer" class="service-card">
-            <img src="https://thumbs.dreamstime.com/b/man-payment-credit-card-shop-optometry-pos-fintech-customer-experience-eye-care-people-sale-machine-banking-321514738.jpg" alt="Customer Experience" class="img-fluid rounded-top" />
+            <img src="static/images/customer.jpeg" alt="Customer Experience" class="img-fluid rounded-top" />
             <div class="card-body">
               <h5 class="card-title">Customer Experience</h5>
             </div>
@@ -111,7 +114,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-6 mb-4">
-          <img src="path/to/low-vision-image.jpg" alt="Low Vision" class="img-fluid rounded" />
+          <img src="https://discoveryeye.org/wp-content/uploads/2019/05/12507304_433258730202621_7070301688899763966_n-e1480571236328.jpg" alt="Low Vision" class="img-fluid rounded" />
         </div>
         <div class="col-lg-6">
           <h2 class="text-capitalize mb-3">What Does Low Vision Mean?</h2>
@@ -200,18 +203,17 @@
     }
     
     .service-card img {
-      height: 190px;
       width: 100%;
+      height: 200px;
       object-fit: cover;
-      flex-shrink: 0;
     }
     
     .card-body {
-      padding: 20px;
       flex-grow: 1;
       display: flex;
       align-items: center;
       justify-content: center;
+      padding: 20px;
     }
     
     .card-title {
