--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -34,8 +34,8 @@
         <!-- Content Section: 50% Width -->
         <div class="col-lg-6 col-sm-12">
           <div class="about-content pl-4 mt-4 mt-lg-0">
-            <h2 class="title-color">About Karunya Eye care</h2>
-            <p class="mt-4 mb-5">About Karunya Eye Hospital Established in the year 1985 in the name and style as K.K.Opticals & Eye Clinic at Adoor, Pathanamthitta District, Kerala by Mr. Tilly B George, a pioneer in the field of Optical Lens, Frames and its accessories, has achieved remarkable growth for the past 40 years. His commitment, determination, hard work and vision of establishing a “Dream Center” of eye care is now a reality. Karunya Eye Hospital (KEH), the present-day Specialty Eye Care Hospital at Adoor was established in the year 2008. KEH is one of most trusted eye care hospitals in Adoor, Pathanamthitta District, Kerala State (India), committed to providing quality eye care and treatment of eye disorders to all sections of society. Now we have Three most modern Centres at Adoor, Pandalam and Kottarakkara, offers all ophthalmic specialities, serving hundreds of patients every day. We have Eight highly qualified and dedicated Eye Specialists & surgeons, who provide a wide range of speciality ophthalmic care. Our team of doctors provide Compassionate and comprehensive treatments to all patients visiting our Centres. KEH’s state-of-the art facilities, latest treatment techniques, highly experienced eye specialists, competent staff, and certified technicians allow us to provide superior eye care for patients and attain the best possible results. A NABH Certified Eye Hospital, we are committed to providing the best services in eye care through continual improvements of our systems, process, technology, and through the employment of dedicated and competent professionals of a progressive mindset. We offer the most advanced Eye Care Treatment. We combine the expertise of our team of Eye Surgeons, highly experienced in their specialties of Cataract, Retina, Glaucoma, Laser Eye Surgeries etc. Thousands of most advanced Painless MICS Cataract Surgeries (Phaco) have been performed in our Centres. KEH is conveniently located with easy access by road, rail and air. Thiruvananthapuram International Airport is only 95 km away and the nearest railway station is only 26 km away from the hospital. The district headquarters, Pathanamthitta is also only 18 Kms away from the hospital. Main Central (MC) Road is passing through Adoor.</p>
+            <h2 class="title-color">About Karunya Eye Hospital</h2>
+            <p class="mt-4 mb-5">About Karunya Eye Hospital Established in the year 1985 in the name and style as K.K.Opticals & Eye Clinic at Adoor, Pathanamthitta District, Kerala by Mr. Tilly B George, a pioneer in the field of Optical Lens, Frames and its accessories, has achieved remarkable growth for the past 40 years. His commitment, determination, hard work and vision of establishing a “Dream Center” of eye Hospital is now a reality. Karunya Eye Hospital (KEH), the present-day Specialty Eye Hospital at Adoor was established in the year 2008. KEH is one of most trusted eye Hospital hospitals in Adoor, Pathanamthitta District, Kerala State (India), committed to providing quality eye Hospital and treatment of eye disorders to all sections of society. Now we have Three most modern Centres at Adoor, Pandalam and Kottarakkara, offers all ophthalmic specialities, serving hundreds of patients every day. We have Eight highly qualified and dedicated Eye Specialists & surgeons, who provide a wide range of speciality ophthalmic Hospital. Our team of doctors provide Compassionate and comprehensive treatments to all patients visiting our Centres. KEH’s state-of-the art facilities, latest treatment techniques, highly experienced eye specialists, competent staff, and certified technicians allow us to provide superior eye Hospital for patients and attain the best possible results. A NABH Certified Eye Hospital, we are committed to providing the best services in eye Hospital through continual improvements of our systems, process, technology, and through the employment of dedicated and competent professionals of a progressive mindset. We offer the most advanced Eye Hospital Treatment. We combine the expertise of our team of Eye Surgeons, highly experienced in their specialties of Cataract, Retina, Glaucoma, Laser Eye Surgeries etc. Thousands of most advanced Painless MICS Cataract Surgeries (Phaco) have been performed in our Centres. KEH is conveniently located with easy access by road, rail and air. Thiruvananthapuram International Airport is only 95 km away and the nearest railway station is only 26 km away from the hospital. The district headquarters, Pathanamthitta is also only 18 Kms away from the hospital. Main Central (MC) Road is passing through Adoor.</p>
 
             <a href="about" class="btn btn-main-2 btn-round-full btn-icon">Know more<i class="icofont-simple-right ml-3"></i></a>
           </div>
@@ -47,12 +47,12 @@
 
   <section class="feature-page">
     <div class="container">
-      <h2 class="text-center mb-5 title-color">Why Choose Karunya Eye care?</h2>
+      <h2 class="text-center mb-5 title-color">Why Choose Karunya Eye Hospital?</h2>
       <div class="row">
         <div class="col-lg-3 col-md-6">
           <div class="about-block-item mb-5 mb-lg-0">
-            <img src="static/images/gallery/37 Q.jpg" alt="Compassionate and Personalized Care" class="img-fluid w-100" />
-            <h4 class="mt-3">Compassionate and Personalized Care</h4>
+            <img src="static/images/gallery/37 Q.jpg" alt="Compassionate and Personalized Hospital" class="img-fluid w-100" />
+            <h4 class="mt-3">Compassionate and Personalized Hospital</h4>
             <p>We treat every patient like family, ensuring comfort, education, and informed decision-making for better eye health.</p>
           </div>
         </div>
@@ -66,14 +66,14 @@
         <div class="col-lg-3 col-md-6">
           <div class="about-block-item mb-5 mb-lg-0">
             <img src="static/images/gallery/42 Q.jpg" alt="Affordable Quality Eye hospital" class="img-fluid w-100" />
-            <h4 class="mt-3">Affordable Quality Eye care</h4>
+            <h4 class="mt-3">Affordable Quality Eye Hospital</h4>
             <p>Accredited NABH centers providing high-quality treatment at pocket-friendly prices for all sections of society.</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6">
           <div class="about-block-item">
             <h4 class="mt-3">Experienced and Skilled Experts</h4>
-            <p>Our dedicated team of specialists ensures superior care with continuous training and expertise.</p>
+            <p>Our dedicated team of specialists ensures superior Hospital with continuous training and expertise.</p>
             <img src="static/images/gallery/48 Q.jpg" alt="Experienced and Skilled Experts" class="img-fluid w-100" />
           </div>
         </div>
@@ -84,7 +84,7 @@
   <section>
     <div class="text-center mt-5">
       <h2 class="title-color">QUALITY POLICY</h2>
-      <p class="mt-4 mb-5 justify-text">Karunya Eye care is dedicated to delivering comprehensive, world-class eye care in a safe and patient-centered environment. With a strong commitment to quality, professional ethics, and advanced medical expertise, we ensure the highest standards of diagnosis, treatment, and vision care while continuously enhancing patient satisfaction through a robust Quality Management System.</p>
+      <p class="mt-4 mb-5 justify-text">Karunya Eye Hospital is dedicated to delivering comprehensive, world-class eye Hospital in a safe and patient-centered environment. With a strong commitment to quality, professional ethics, and advanced medical expertise, we ensure the highest standards of diagnosis, treatment, and vision Hospital while continuously enhancing patient satisfaction through a robust Quality Management System.</p>
     </div>
   </section>
 
@@ -95,7 +95,7 @@
         <div class="col-lg-4">
           <div class="about-content pr-4 mt-4 mt-lg-0">
             <h2 class="title-color">OUR MISSION</h2>
-            <p class="mt-4 mb-5">To provide quality eye care treatment to the people, as per our vision, by establishing as many centres as possible in both inside and outside India.</p>
+            <p class="mt-4 mb-5">To provide quality eye Hospital treatment to the people, as per our vision, by establishing as many centres as possible in both inside and outside India.</p>
             <a href="" class="btn btn-main-2 btn-round-full btn-icon">Learn More<i class="fa-solid fa-angles-right text-white"></i></a>
           </div>
         </div>
@@ -133,7 +133,7 @@
         <div class="col-lg-4">
           <div class="about-content pr-4 mt-4 mt-lg-0">
             <h2 class="title-color">OUR VISION</h2>
-            <p class="mt-4 mb-5">Make available the advanced, higher and technology in the eye care treatment to all needy people at affordable costs and accessible locations.</p>
+            <p class="mt-4 mb-5">Make available the advanced, higher and technology in the eye Hospital treatment to all needy people at affordable costs and accessible locations.</p>
             <a href="" class="btn btn-main-2 btn-round-full btn-icon">Learn More<i class="fa-solid fa-angles-right text-white"></i></a>
           </div>
         </div>
@@ -144,15 +144,15 @@
 
   <section>
     <div class="text-center mt-5 approach-section">
-      <h2 class="title-color">OUR APPROACH TO EYE CARE</h2>
+      <h2 class="title-color">OUR APPROACH TO EYE HOSPITAL</h2>
       <div class="row mt-4">
-        <!-- Card 1: Care with Compassion -->
+        <!-- Card 1: Hospital with Compassion -->
         <div class="col-md-4">
           <div class="card border-0 approach-card">
-            <img src="static/images/gallery/41 Q.jpg" alt="Care with Compassion" class="card-img-top rounded approach-img" />
+            <img src="static/images/gallery/41 Q.jpg" alt="Hospital with Compassion" class="card-img-top rounded approach-img" />
             <div class="card-body">
-              <h4 class="card-title">Care with Compassion</h4>
-              <p class="card-text">We provide care with a positive attitude, listen to patients, apologize for mistakes, and take corrective action.</p>
+              <h4 class="card-title">Hospital with Compassion</h4>
+              <p class="card-text">We provide Hospital with a positive attitude, listen to patients, apologize for mistakes, and take corrective action.</p>
             </div>
           </div>
         </div>
@@ -163,7 +163,7 @@
             <img src="static/images/gallery/44 Q.jpg" alt="Integrity and Excellence" class="card-img-top rounded approach-img" />
             <div class="card-body">
               <h4 class="card-title">Integrity and Excellence</h4>
-              <p class="card-text">We work as a team to provide comprehensive eye care. We act ethically and take responsibility for everything we do.</p>
+              <p class="card-text">We work as a team to provide comprehensive eye Hospital. We act ethically and take responsibility for everything we do.</p>
             </div>
           </div>
         </div>
@@ -189,7 +189,7 @@
       <div class="quality-list">
         <ul>
           <li>
-            <i class="fa-solid fa-angles-right"></i> Regularly upgrade the quality services provided by the care.
+            <i class="fa-solid fa-angles-right"></i> Regularly upgrade the quality services provided by the Hospital.
           </li>
           <li>
             <i class="fa-solid fa-angles-right"></i> Provide satisfactory customer service through continuous improvements of service quality.
@@ -201,7 +201,7 @@
             <i class="fa-solid fa-angles-right"></i> Continuously explore developments in surgery, medicine, and diagnosis, adopting the latest methods and medicines accordingly.
           </li>
           <li>
-            <i class="fa-solid fa-angles-right"></i> Ensure the availability of adequate resources to sustain and maintain the quality assurance programme of the care and continually improve its effectiveness.
+            <i class="fa-solid fa-angles-right"></i> Ensure the availability of adequate resources to sustain and maintain the quality assurance programme of the Hospital and continually improve its effectiveness.
           </li>
         </ul>
       </div>
@@ -216,7 +216,7 @@
           <div class="section-title text-center">
             <h2>GOVERNMENT PROJECTS</h2>
             <div class="divider mx-auto my-4"></div>
-            <p>We collaborate with leading eye care specialists and institutions to bring the best vision care to our patients. Their expertise and commitment help us ensure the highest standards of eye health and treatment.</p>
+            <p>We collaborate with leading eye Hospital specialists and institutions to bring the best vision Hospital to our patients. Their expertise and commitment help us ensure the highest standards of eye health and treatment.</p>
           </div>
         </div>
       </div>
