--- a/templates/customer.html
+++ b/templates/customer.html
@@ -35,7 +35,7 @@
               <strong>Try Before You Buy:</strong> Enjoy the convenience of trying on multiple frames in a relaxed setting to find the perfect fit.
             </li>
             <li>
-              <strong>Aftercare Services:</strong> We believe in long-term relationships with our customers. Our aftercare services include adjustments, repairs, and advice on lens care.
+              <strong>After Hospital Services:</strong> We believe in long-term relationships with our customers. Our after Hospital services include adjustments, repairs, and advice on lens Hospital.
             </li>
           </ul>
         </div>
@@ -60,7 +60,7 @@
         <!-- Text Right -->
         <div class="col-lg-6 p-5 d-flex flex-column justify-content-center order-lg-2 order-1">
           <h2 class="mb-4 text-primary fw-bold">Our Doctors</h2>
-          <p class="text-muted">Karunya Eye Hospital’s experienced doctors provide expert, compassionate eye care across various specialties, including cataract surgery & retinal care. Using advanced technology, they offer personalised treatment for all your vision needs, ensuring the highest standards of care.</p>
+          <p class="text-muted">Karunya Eye Hospital’s experienced doctors provide expert, compassionate eye Hospital across various specialties, including cataract surgery & retinal Hospital. Using advanced technology, they offer personalised treatment for all your vision needs, ensuring the highest standards of Hospital.</p>
         </div>
       </div>
     </div>
