--- a/templates/opt.html
+++ b/templates/opt.html
@@ -25,8 +25,8 @@
         <!-- Text Content Left -->
         <div class="col-lg-6 p-5 d-flex flex-column justify-content-center">
           <h2 class="mb-4 text-primary fw-bold">General Ophthalmology</h2>
-          <p class="text-muted">KEH has always been the best eye hospital for general ophthalmology, where we offer comprehensive eye care, encompassing everything from routine vision checks to diagnosing and treating eye diseases. Our team of experienced ophthalmologists serves patients of all ages, from newborns to the elderly, ensuring that each individual receives personalised care.</p>
-          <p class="text-muted">Our general ophthalmologists are often the first point of contact for patients, providing thorough eye examinations and managing a variety of eye conditions. They play a critical role in diagnosing various disorders and referring patients to specialist services when necessary, ensuring holistic and continuous eye care.</p>
+          <p class="text-muted">KEH has always been the best eye hospital for general ophthalmology, where we offer comprehensive eye Hospital, encompassing everything from routine vision checks to diagnosing and treating eye diseases. Our team of experienced ophthalmologists serves patients of all ages, from newborns to the elderly, ensuring that each individual receives personalised Hospital.</p>
+          <p class="text-muted">Our general ophthalmologists are often the first point of contact for patients, providing thorough eye examinations and managing a variety of eye conditions. They play a critical role in diagnosing various disorders and referring patients to specialist services when necessary, ensuring holistic and continuous eye Hospital.</p>
         </div>
 
         <!-- Image Right -->
