--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -24,7 +24,7 @@
       <div class="row justify-content-left">
         <div class="col-lg-6 text-left">
           <div class="section-title">
-            <h2>Our Eye Care Journey</h2>
+            <h2>Our Eye Hospital Journey</h2>
             <div class="divider mx-auto my-4"></div>
             <p>Explore our state-of-the-art eye care facilities, advanced surgical procedures, and heartwarming patient journeys through our gallery.</p>
           </div>
