--- a/templates/specialities.html
+++ b/templates/specialities.html
@@ -27,7 +27,7 @@
           <div class="section-title">
             <h2>Our Specialities</h2>
             <div class="divider mx-auto my-4"></div>
-            <p>Delivering comprehensive and advanced eye care services with cutting-edge technology and expertise.</p>
+            <p>Delivering comprehensive and advanced eye Hospital services with cutting-edge technology and expertise.</p>
           </div>
         </div>
       </div>
@@ -100,7 +100,7 @@
               <h4 class="mt-3 mb-3">Cornial Clinic</h4>
             </div>
             <div class="content">
-              <p class="mb-4">Expert cornial care for infections, injuries, and transplants.</p>
+              <p class="mb-4">Expert cornial Hospital for infections, injuries, and transplants.</p>
             </div>
           </div>
         </div>
@@ -160,7 +160,7 @@
               <h4 class="mt-3 mb-3">Optical Coherence Tomography (OCT)</h4>
             </div>
             <div class="content">
-              <p class="mb-4">Expert corneal care for infections, injuries, and transplants.</p>
+              <p class="mb-4">Expert corneal Hospital for infections, injuries, and transplants.</p>
             </div>
           </div>
         </div>
@@ -278,7 +278,7 @@
               <h4 class="mt-3 mb-3">Premium & Branded Hi-Tech Optical Section (Insight Galleria).</h4>
             </div>
             <div class="content">
-              <p class="mb-4">Expert corneal care for infections, injuries, and transplants.</p>
+              <p class="mb-4">Expert corneal Hospital for infections, injuries, and transplants.</p>
             </div>
           </div>
         </div>
