--- a/templates/contactform.html
+++ b/templates/contactform.html
@@ -89,21 +89,21 @@
                 <div class="contact-block mb-4 mb-lg-0">
                     <i class="icofont-live-support"></i>
                     <h5>Emergency Helpline</h5>
-                     +1-800-OPTICAL
+                     +91 974568 8850
                 </div>
             </div>
             <div class="col-lg-4 col-sm-6 col-md-6">
                 <div class="contact-block mb-4 mb-lg-0">
                     <i class="icofont-support-faq"></i>
                     <h5>Email Support</h5>
-                     karunya@eyehospital.com
+                    support@karunyaeyehospital.org
                 </div>
             </div>
             <div class="col-lg-4 col-sm-6 col-md-6">
                 <div class="contact-block mb-4 mb-lg-0">
                     <i class="icofont-location-pin"></i>
                     <h5>Our Location</h5>
-                     123 Vision Street, New York, USA
+                     Adoor , Kerala
                 </div>
             </div>
         </div>
