--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
             <div class="divider mb-3"></div>
             <span class="text-uppercase text-sm letter-spacing">Comprehensive Eye Solutions</span>
             <h1 class="mb-3 mt-3">Your Vision, Our Priority</h1>
-            <p class="mb-4 pr-5">Get world class eye Hospital services and treatment from highly qualified and certified Eye Hospital Doctors in Adoor, Pandalam & Kottarakkara at Karunya Eye Hospital.</p>
+            <p class="mb-4 pr-5">Get world class eye care services and treatment from highly qualified and certified Eye Care Doctors in Adoor, Pandalam and Kottarakkara at Karunya Eye Hospital.</p>
             <div class="btn-container">
               <a href="appoinment" target="_blank" class="btn btn-main-2 btn-icon btn-round-full">Book an Appointment <i class="icofont-simple-right ml-2"></i></a>
             </div>
@@ -85,7 +85,7 @@
                 <i class="ri-phone-line"></i>
               </div>
               <span>Emergency Eye Hospital</span>
-              <h4 class="mb-3">Call: 1-800-555-OPTI</h4>
+              <h4 class="mb-3">Call: +919745688850</h4>
               <p>We provide 24/7 emergency eye Hospital services. If you experience sudden vision loss, eye injury, or severe discomfort, contact us immediately.</p>
             </div>
           </div>
@@ -265,7 +265,7 @@
           <div class="appoinment-content">
             <img src="static/images/12.png" alt="" class="img-fluid" />
             <div class="emergency">
-              <h2 class="text-lg"><i class="icofont-phone-circle text-lg"></i>+91 9856798098</h2>
+              <h2 class="text-lg"><i class="icofont-phone-circle text-lg"></i>+91 9745688850</h2>
             </div>
           </div>
         </div>
