--- a/templates/base.html
+++ b/templates/base.html
@@ -37,18 +37,18 @@
             <div class="col-lg-6">
               <ul class="top-bar-info list-inline-item pl-0 mb-0">
                 <li class="list-inline-item">
-                  <a href="mailto:support@gmail.com"><i class="icofont-support-faq mr-2"></i>support@karunyaeyehospital.com</a>
+                  <a href="mailto:support@gmail.com"><i class="icofont-support-faq mr-2"></i>support@karunyaeyehospital.org</a>
                 </li>
                 <li class="list-inline-item">
-                  <i class="icofont-location-pin mr-2"></i>Kollam , Kerala
+                  <i class="icofont-location-pin mr-2"></i>Adoor , Kerala
                 </li>
               </ul>
             </div>
             <div class="col-lg-6">
               <div class="text-lg-right top-right-bar mt-2 mt-lg-0">
-                <a href="tel:+23-345-67890">
+                <a href="tel:+919745688850">
                   <span>Call Now :</span>
-                  <span class="h4">823-4565-13456</span>
+                  <span class="h4">+919745688850</span>
                 </a>
               </div>
             </div>
@@ -206,14 +206,14 @@
                   <i class="icofont-email mr-3"></i>
                   <span class="h6 mb-0">24/7 Support Available</span>
                 </div>
-                <h4 class="mt-2"><a href="mailto:support@eyehospital.com">support@karunyaeyehospital.com</a></h4>
+                <h4 class="mt-2"><a href="mailto:support@eyehospital.com">support@karunyaeyehospital.org</a></h4>
               </div>
               <div class="footer-contact-block">
                 <div class="icon d-flex align-items-center">
                   <i class="icofont-phone mr-3"></i>
                   <span class="h6 mb-0">Mon to Sat: 09:00 - 18:00</span>
                 </div>
-                <h4 class="mt-2"><a href="tel:+123-456-7890">+123-456-7890</a></h4>
+                <h4 class="mt-2"><a href="tel:+919745688850">+919745688850</a></h4>
               </div>
             </div>
           </div>
