--- a/templates/base.html
+++ b/templates/base.html
@@ -143,7 +143,7 @@
         <div class="row mb-2">
           <div class="col-lg-4 mr-auto col-sm-6">
             <div class="widget mb-5 mb-lg-0">
-              <p>Providing world-class eye hospital with advanced technology and compassionate service to restore and enhance vision.</p>
+              <p>Providing world-class eye care with advanced t echnology and compassionate service to restore and enhance vision.</p>
               <ul class="list-inline footer-socials mt-4">
                 <li class="list-inline-item">
                   <a href="#"><i class="icofont-facebook"></i></a>
@@ -165,9 +165,6 @@
               <ul class="list-unstyled footer-menu lh-35">
                 <li>
                   <a href="#">Cataract Surgery</a>
-                </li>
-                <li>
-                  <a href="#">LASIK & Refractive Surgery</a>
                 </li>
                 <li>
                   <a href="#">Retina Treatment</a>
