--- a/static/css/style.css
+++ b/static/css/style.css
@@ -73,6 +73,7 @@ h6,
 
 p {
   line-height: 30px;
+  font-weight: 400;
 }
 
 .navbar-toggle .icon-bar {
@@ -140,6 +141,7 @@ input[type="tel"]:focus {
   background: #005e79;
   color: #fff;
   border-color: #005e79;
+  border-radius: 15px !important;
 }
 
 .btn-main:hover {
@@ -149,6 +151,7 @@ input[type="tel"]:focus {
 }
 
 .btn-main-2 {
+  border-radius: 15px !important;
   background: #005e79;
   color: #fff;
   border-color: #005e79;
@@ -300,7 +303,8 @@ input[type="tel"]:focus {
 }
 
 .text-sm {
-  font-size: 14px;
+  font-size: 18px;
+  font-weight: 800;
 }
 
 .text-md {
@@ -734,6 +738,7 @@ a:focus {
 .feature-item {
   flex-basis: 33.33%;
   margin: 0px 10px;
+  border-radius: 30px;
   padding: 10px 30px;
   background-color: #fff;
   box-shadow: 0px 30px 30px 0px rgba(0, 42, 106, 0.1);
@@ -800,7 +805,7 @@ a:focus {
 .service .service-item {
   background: #fff;
   padding: 10px;
-  border-radius: 0px;
+  border-radius: 30px;
   height: 280px;
   width: 355px;
 }
@@ -1108,6 +1113,7 @@ a:focus {
   margin: 0px 4px;
   margin-bottom: 30px;
   height: 450px;
+  border-radius: 30px;
 }
 
 .testimonial-block.style-2 .testimonial-thumb {
@@ -1777,6 +1783,8 @@ a:focus {
   border-top-left-radius: calc(.25rem - 1px);
   border-top-right-radius: calc(.25rem - 1px);
   height: 300px;
+  border-radius: 30px !important;
+  padding: 20px;
 }
 
 .card-body {
