--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
   </head>
 
   <body id="top">
@@ -37,7 +40,7 @@
             <div class="col-lg-6">
               <ul class="top-bar-info list-inline-item pl-0 mb-0">
                 <li class="list-inline-item">
-                  <a href="mailto:support@gmail.com"><i class="icofont-support-faq mr-2"></i>support@karunyaeyehospital.org</a>
+                  <a href="mailto:karunyaeyecare@gmail.com"><i class="icofont-support-faq mr-2"></i>karunyaeyecare@gmail.com</a>
                 </li>
                 <li class="list-inline-item">
                   <i class="icofont-location-pin mr-2"></i>Adoor , Kerala
@@ -48,7 +51,7 @@
               <div class="text-lg-right top-right-bar mt-2 mt-lg-0">
                 <a href="tel:+919745688850">
                   <span>Call Now :</span>
-                  <span class="h4">+919745688850</span>
+                  <span class="h4">+91 97456 88850</span>
                 </a>
               </div>
             </div>
@@ -203,14 +206,14 @@
                   <i class="icofont-email mr-3"></i>
                   <span class="h6 mb-0">24/7 Support Available</span>
                 </div>
-                <h4 class="mt-2"><a href="mailto:support@eyehospital.com">support@karunyaeyehospital.org</a></h4>
+                <h4 class="mt-2"><a href="mailto:karunyaeyecare@gmail.com">karunyaeyecare@gmail.com</a></h4>
               </div>
               <div class="footer-contact-block">
                 <div class="icon d-flex align-items-center">
                   <i class="icofont-phone mr-3"></i>
                   <span class="h6 mb-0">Mon to Sat: 09:00 - 18:00</span>
                 </div>
-                <h4 class="mt-2"><a href="tel:+919745688850">+919745688850</a></h4>
+                <h4 class="mt-2"><a href="tel:+919745688850">+91 97456 88850</a></h4>
               </div>
             </div>
           </div>
