--- a/templates/managements.html
+++ b/templates/managements.html
@@ -32,8 +32,8 @@
 
       <!-- Row 1: Chairman Centered --> <div class="row justify-content-center mb-4">
         <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-4">
-          <div class="card border-0 shadow rounded text-center w-100">
-            <img src="{% static 'images/chairman.png' %}" class="card-img-top img-fluid mx-auto" alt="Chairman" style="width: 250px; height: auto; padding-top: 20px;" /> <div class="card-body">
+          <div class="card border-0 shadow rounded text-center w-100" style="border-radius: 30px !important;">
+            <img src="{% static 'images/chairman.png' %}" class="card-img-top img-fluid mx-auto" alt="Chairman" style="width: 250px; height: auto; margin-top: 20px; border-radius: 30px !important;" /> <div class="card-body">
               <h5 class="card-title mb-1">Mr. Tilly B George</h5> <h4 class="card-title fs-5">Chairman</h4>
             </div>
           </div>
@@ -44,7 +44,7 @@
       <div class="row justify-content-center">
         <!-- Card 2 -->
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-4">
-          <div class="card border-0 shadow rounded text-center w-100">
+          <div class="card border-0 shadow rounded text-center w-100" style="border-radius: 30px !important;">
             <img src="{% static 'images/thomas.png' %}" class="card-img-top img-fluid" alt="Centre Head" />
             <div class="card-body">
               <h5 class="card-title mb-1">Mr. Thomas John</h5>
@@ -55,7 +55,7 @@
 
         <!-- Card 3 -->
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-4">
-          <div class="card border-0 shadow rounded text-center w-100">
+          <div class="card border-0 shadow rounded text-center w-100" style="border-radius: 30px !important;">
             <img src="{% static 'images/suresh.jpg' %}" class="card-img-top img-fluid" alt="Centre Head" />
             <div class="card-body">
               <h5 class="card-title mb-1">Mr. Suresh Kumar</h5>
@@ -66,7 +66,7 @@
 
         <!-- Card 4 -->
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-4">
-          <div class="card border-0 shadow rounded text-center w-100">
+          <div class="card border-0 shadow rounded text-center w-100" style="border-radius: 30px !important;">
             <img src="{% static 'images/centrehead.png' %}" class="card-img-top img-fluid" alt="Centre Head" />
             <div class="card-body">
               <h5 class="card-title mb-1">Mr. Mukesh Kumar</h5>
